# palindromes

./: CMakeLists.txt
palindromeThang/: main.cpp
palindromeThang.xcodeproj/: project.pbxproj
palindromeThang.xcodeproj/xcuserdata/josephcraig.xcuserdatad/xcschemes/: xcschememanagement.plist
